@@ -49,3 +49,9 @@ eject {
 	device = "/dev/dvd"
 }
 
+# Apple Remote
+appleir {
+	# enable/disable the appleir support
+	enabled = no
+}
+
