@@ -14,7 +14,11 @@
 #define USB_PRODUCT_ID_GEYSER4_ISO    0x021b
 #define USB_PRODUCT_ID_GEYSER4_JIS    0x021c
 
+/* Apple Remote IR Receiver */
+#define USB_PRODUCT_ID_APPLEIR        0x8240
 
+
+/* Keyboard hotkeys */
 #define K_LCD_BCK_DOWN          0xe0
 #define K_LCD_BCK_UP            0xe1
 #define K_AUDIO_MUTE            0x71
@@ -25,6 +29,13 @@
 #define K_KBD_BCK_DOWN          0xe5
 #define K_KBD_BCK_UP            0xe6
 #define K_CD_EJECT              0xa1
+
+/* Apple Remote controller keys */
+/* audio up/down use the same codes as the keyboard */
+#define K_IR_FFWD               0xa3
+#define K_IR_REWD               0xa5
+#define K_IR_PLAY               0xa4
+#define K_IR_MENU               0x8b
 
 
 #define EVDEV_BASE              "/dev/input/event"
